--- a/css/clan.css
+++ b/css/clan.css
@@ -80,12 +80,12 @@
         height: 200px;
         position: absolute;
         top: 40px;
-        left: 100px;
+        left: 60px;
     }
     .titulo-element h1{
         position: absolute;
-        top: 310px;
-        left: 120px;
+        top: 240px;
+        left: 80px;
         font-size: 3rem;
     }
     .img-banner{
@@ -96,5 +96,10 @@
                     linear-gradient(45deg, #1DA4D9, #4898D2) border-box;
         border: 15px solid transparent;
         border-radius: 12px;
+    }
+
+    .banner{
+        width: 320px;
+        height: 320px;
     }
 }
