--- a/css/section1.css
+++ b/css/section1.css
@@ -64,13 +64,20 @@ text-align: center;
     cursor: pointer;
 }
 
-
-@media(max-width: 728px){
+@media(min-width: 320px) and (max-width: 768px){
+    .img-carrosel{
+        width: 320px;
+        height: 80%;
+        margin-top: 20px;
+        background: linear-gradient(#1DA4D9, #4898D2) padding-box,
+                    linear-gradient(45deg, #1DA4D9, #4898D2) border-box;
+        border: 15px solid transparent;
+        border-radius: 12px;
+    }
     .span{
         display: none;
-    }
+    }  
 }
-
 @media(min-width: 768px){
     .img-carrosel{
         width: 1100px;
